noch einen schritt weiter in inifile initool zurück