@@ -22,6 +22,7 @@ package CommonTools.ini;
 
 import java.io.BufferedReader;
 import java.io.File;
+import java.io.FileNotFoundException;
 import java.io.FileReader;
 import java.io.FileWriter;
 import java.io.IOException;
@@ -29,10 +30,15 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.Reader;
 import java.io.Writer;
+import java.sql.Timestamp;
 import java.text.DateFormat;
+import java.text.ParseException;
 import java.text.SimpleDateFormat;
+import java.util.Collections;
+import java.util.Date;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
+import java.util.Map;
 import java.util.NoSuchElementException;
 import java.util.Properties;
 import java.util.Set;
@@ -49,57 +55,74 @@ import org.slf4j.LoggerFactory;
  * @since 1.0
  */
 public final class INIFile {
-        /** Variable to hold the ini file name and full path. */
+    /** Variable to represent the date format */
+    private String mstrDateFmt = "dd.mm.yyyy";
+
+    /** Variable to represent the timestamp format */
+    private String mstrTimeStampFmt = "dd.mm.yyyy hh:mm:ss";
+
+    /** Variable to denote the successfull load operation. */
+    private boolean mblnLoaded = false;
+
+    /** Variable to hold the ini file name and full path */
     private String mstrFile;
 
-    /** Variable to hold inputstream of the inifile-content in a table. */
+    /** Variable to hold inputstream of the inifile-content in a table */
     private InputStream streamin;
 
     /** Variable to hold the sections in an ini file. */
     private LinkedHashMap<String, INISection> mhmapSections;
 
-    /** Variable to hold environment variables. */
+    /** Variable to hold environment variables **/
     private Properties mpropEnv;
 
-    private Logger logger = LoggerFactory.getLogger(INIFile.class);
+    Logger logger = LoggerFactory.getLogger(INIFile.class);
 
     /**
      * Create a iniFile object from the file named in the parameter.
-     * 
+     *
      * @param pstrPathAndName The full path and name of the ini file to be used.
      */
     public INIFile(String pstrPathAndName) {
         if (pstrPathAndName == null || !new File(pstrPathAndName).exists()) {
             logger.error("Inifile does not exist:" + pstrPathAndName);
         }
-        mpropEnv = getEnvVars();
-        mhmapSections = new LinkedHashMap<>();
-        mstrFile = pstrPathAndName;
+        this.mpropEnv = getEnvVars();
+        this.mhmapSections = new LinkedHashMap<String, INISection>();
+        this.mstrFile = pstrPathAndName;
         // Load the specified INI file.
-        if (checkFile(pstrPathAndName)) {
+        if (checkFile(pstrPathAndName))
             loadFile();
-        }
     }
 
-    INIFile(InputStream istream, String pstrPathAndName) {
+    public INIFile(InputStream istream, String pstrPathAndName) {
         if (!new File(pstrPathAndName).exists()) {
             logger.debug("loading from Stream:" + pstrPathAndName);
         }
-        mpropEnv = getEnvVars();
-        mhmapSections = new LinkedHashMap<>();
-        mstrFile = pstrPathAndName;
-        streamin = istream;
+        this.mpropEnv = getEnvVars();
+        this.mhmapSections = new LinkedHashMap<String, INISection>();
+        this.mstrFile = pstrPathAndName;
+        this.streamin = istream;
         // read the specified INI file.
-        if (streamin != null) {
+        if (streamin != null)
             readFile();
-        }
     }
 
-    
+    /*------------------------------------------------------------------------------
+     * Getters
+    ------------------------------------------------------------------------------*/
+    /**
+     * Lemmi 20101224: neue Funktion: Check file loading success
+     *
+     * @return TRUE if file was loaded successfully
+     */
+    public Boolean exIgnore() {
+        return this.mblnLoaded;
+    }
 
     /**
      * Returns the ini file name being used.
-     * 
+     *
      * @return the INI file name.
      */
     public String getFileName() {
@@ -112,7 +135,7 @@ public final class INIFile {
 
     /**
      * Returns the specified string property from the specified section.
-     * 
+     *
      * @param pstrSection the INI section name.
      * @param pstrProp    the property to be retrieved.
      * @return the string property value.
@@ -120,7 +143,7 @@ public final class INIFile {
     public String getStringProperty(String pstrSection, String pstrProp) {
         String strRet = null;
         INIProperty objProp = null;
-        INISection objSec;
+        INISection objSec = null;
 
         objSec = this.mhmapSections.get(pstrSection);
         if (objSec != null) {
@@ -143,7 +166,7 @@ public final class INIFile {
      * <li>TRUE/True/true - boolean true</li>
      * <li>FALSE/False/false - boolean false</li>
      * </ol>
-     * 
+     *
      * @param pstrSection the INI section name.
      * @param pstrProp    the property to be retrieved.
      * @return the boolean value
@@ -152,7 +175,7 @@ public final class INIFile {
         boolean blnRet = false;
         String strVal = null;
         INIProperty objProp = null;
-        INISection objSec;
+        INISection objSec = null;
 
         objSec = this.mhmapSections.get(pstrSection);
         if (objSec != null) {
@@ -160,17 +183,19 @@ public final class INIFile {
             if (objProp != null) {
                 strVal = objProp.getPropValue()
                                 .toUpperCase();
-                if ("YES".equals(strVal) || "TRUE".equals(strVal) || "1".equals(strVal)) {
+                if (strVal.equals("YES") || strVal.equals("TRUE") || strVal.equals("1")) {
                     blnRet = true;
                 }
+
             }
+
         }
-        return blnRet;
+        return Boolean.valueOf(blnRet);
     }
 
     /**
      * Returns the specified integer property from the specified section.
-     * 
+     *
      * @param pstrSection the INI section name.
      * @param pstrProp    the property to be retrieved.
      * @return the integer property value.
@@ -179,7 +204,7 @@ public final class INIFile {
         Integer intRet = null;
         String strVal = null;
         INIProperty objProp = null;
-        INISection objSec;
+        INISection objSec = null;
 
         objSec = this.mhmapSections.get(pstrSection);
         if (objSec != null) {
@@ -187,15 +212,13 @@ public final class INIFile {
             try {
                 if (objProp != null) {
                     strVal = objProp.getPropValue();
-                    if (strVal != null) {
+                    if (strVal != null)
                         intRet = Integer.valueOf(strVal);
-                    }
                 }
             } catch (NumberFormatException exIgnore) {
             } finally {
-                if (objProp != null) {
+                if (objProp != null)
                     objProp = null;
-                }
             }
             objSec = null;
         }
@@ -204,7 +227,7 @@ public final class INIFile {
 
     /**
      * Returns the specified long property from the specified section.
-     * 
+     *
      * @param pstrSection the INI section name.
      * @param pstrProp    the property to be retrieved.
      * @return the long property value.
@@ -213,7 +236,7 @@ public final class INIFile {
         Long lngRet = null;
         String strVal = null;
         INIProperty objProp = null;
-        INISection objSec;
+        INISection objSec = null;
 
         objSec = this.mhmapSections.get(pstrSection);
         if (objSec != null) {
@@ -221,37 +244,134 @@ public final class INIFile {
             try {
                 if (objProp != null) {
                     strVal = objProp.getPropValue();
-                    if (strVal != null) {
-                        lngRet = Long.valueOf(strVal);
-                    }
+                    if (strVal != null)
+                        lngRet = new Long(strVal);
                 }
             } catch (NumberFormatException exIgnore) {
             } finally {
-                if (objProp != null) {
+                if (objProp != null)
                     objProp = null;
-                }
             }
             objSec = null;
         }
         return lngRet;
     }
 
- 
+    /**
+     * Returns the specified double property from the specified section.
+     *
+     * @param pstrSection the INI section name.
+     * @param pstrProp    the property to be retrieved.
+     * @return the double property value.
+     */
+    public Double getDoubleProperty(String pstrSection, String pstrProp) {
+        Double dblRet = null;
+        String strVal = null;
+        INIProperty objProp = null;
+        INISection objSec = null;
 
-  
-    
+        objSec = this.mhmapSections.get(pstrSection);
+        if (objSec != null) {
+            objProp = objSec.getProperty(pstrProp);
+            try {
+                if (objProp != null) {
+                    strVal = objProp.getPropValue();
+                    if (strVal != null)
+                        dblRet = new Double(strVal);
+                }
+            } catch (NumberFormatException exIgnore) {
+            } finally {
+                if (objProp != null)
+                    objProp = null;
+            }
+            objSec = null;
+        }
+        return dblRet;
+    }
+
+    /**
+     * Returns the specified date property from the specified section.
+     *
+     * @param pstrSection the INI section name.
+     * @param pstrProp    the property to be retrieved.
+     * @return the date property value.
+     */
+    public Date getDateProperty(String pstrSection, String pstrProp) {
+        Date dtRet = null;
+        String strVal = null;
+        DateFormat dtFmt = null;
+        INIProperty objProp = null;
+        INISection objSec = null;
+
+        objSec = this.mhmapSections.get(pstrSection);
+        if (objSec != null) {
+            objProp = objSec.getProperty(pstrProp);
+            try {
+                if (objProp != null)
+                    strVal = objProp.getPropValue();
+                if (strVal != null) {
+                    dtFmt = new SimpleDateFormat(this.mstrDateFmt);
+                    dtRet = dtFmt.parse(strVal);
+                }
+            } catch (ParseException exIgnore) {
+            } catch (IllegalArgumentException ex) {
+            } finally {
+                if (objProp != null)
+                    objProp = null;
+            }
+            objSec = null;
+        }
+        return dtRet;
+    }
+
+    /**
+     * Returns the specified date property from the specified section.
+     *
+     * @param pstrSection the INI section name.
+     * @param pstrProp    the property to be retrieved.
+     * @return the date property value.
+     */
+    public Date getTimestampProperty(String pstrSection, String pstrProp) {
+        Timestamp tsRet = null;
+        Date dtTmp = null;
+        String strVal = null;
+        DateFormat dtFmt = null;
+        INIProperty objProp = null;
+        INISection objSec = null;
+
+        objSec = this.mhmapSections.get(pstrSection);
+        if (objSec != null) {
+            objProp = objSec.getProperty(pstrProp);
+            try {
+                if (objProp != null)
+                    strVal = objProp.getPropValue();
+                if (strVal != null) {
+                    dtFmt = new SimpleDateFormat(this.mstrDateFmt);
+                    dtTmp = dtFmt.parse(strVal);
+                    tsRet = new Timestamp(dtTmp.getTime());
+                }
+            } catch (ParseException exIgnore) {
+            } catch (IllegalArgumentException ex) {
+            } finally {
+                if (objProp != null)
+                    objProp = null;
+            }
+            objSec = null;
+        }
+        return tsRet;
+    }
 
     /*------------------------------------------------------------------------------
      * Setters
     ------------------------------------------------------------------------------*/
     /**
      * Sets the comments associated with a section.
-     * 
+     *
      * @param pstrSection  the section name
      * @param pstrComments the comments.
      */
     public void addSection(String pstrSection, String pstrComments) {
-        INISection objSec;
+        INISection objSec = null;
 
         objSec = this.mhmapSections.get(pstrSection);
         if (objSec == null) {
@@ -263,14 +383,14 @@ public final class INIFile {
 
     /**
      * Sets the specified string property.
-     * 
+     *
      * @param pstrSection    the INI section name.
      * @param newpstrSection the new Section name to be set.
      * @pstrVal the string value to be persisted
      */
 
     public void renameSection(String pstrSection, String newpstrSection, String pstrComments) {
-        INISection objSec;
+        INISection objSec = null;
 
         objSec = this.mhmapSections.get(pstrSection);
         if (objSec != null) {
@@ -284,13 +404,13 @@ public final class INIFile {
 
     /**
      * Sets the specified string property.
-     * 
+     *
      * @param pstrSection the INI section name.
      * @param pstrProp    the property to be set.
      * @pstrVal the string value to be persisted
      */
     public void setStringProperty(String pstrSection, String pstrProp, String pstrVal, String pstrComments) {
-        INISection objSec;
+        INISection objSec = null;
 
         objSec = this.mhmapSections.get(pstrSection);
         if (objSec == null) {
@@ -302,35 +422,34 @@ public final class INIFile {
 
     /**
      * Sets the specified boolean property.
-     * 
+     *
      * @param pstrSection the INI section name.
      * @param pstrProp    the property to be set.
      * @param pblnVal     the boolean value to be persisted
      */
     public void setBooleanProperty(String pstrSection, String pstrProp, boolean pblnVal, String pstrComments) {
-        INISection objSec;
+        INISection objSec = null;
 
         objSec = this.mhmapSections.get(pstrSection);
         if (objSec == null) {
             objSec = new INISection(pstrSection);
             this.mhmapSections.put(pstrSection, objSec);
         }
-        if (pblnVal) {
+        if (pblnVal)
             objSec.setProperty(pstrProp, "TRUE", pstrComments);
-        } else {
+        else
             objSec.setProperty(pstrProp, "FALSE", pstrComments);
-        }
     }
 
     /**
      * Sets the specified integer property.
-     * 
+     *
      * @param pstrSection the INI section name.
      * @param pstrProp    the property to be set.
      * @param pintVal     the int property to be persisted.
      */
     public void setIntegerProperty(String pstrSection, String pstrProp, int pintVal, String pstrComments) {
-        INISection objSec;
+        INISection objSec = null;
 
         objSec = this.mhmapSections.get(pstrSection);
         if (objSec == null) {
@@ -340,45 +459,112 @@ public final class INIFile {
         objSec.setProperty(pstrProp, Integer.toString(pintVal), pstrComments);
     }
 
-  
-   
+    /**
+     * Sets the specified long property.
+     *
+     * @param pstrSection the INI section name.
+     * @param pstrProp    the property to be set.
+     * @param plngVal     the long value to be persisted.
+     */
+    public void setLongProperty(String pstrSection, String pstrProp, long plngVal, String pstrComments) {
+        INISection objSec = null;
 
-  
+        objSec = this.mhmapSections.get(pstrSection);
+        if (objSec == null) {
+            objSec = new INISection(pstrSection);
+            this.mhmapSections.put(pstrSection, objSec);
+        }
+        objSec.setProperty(pstrProp, Long.toString(plngVal), pstrComments);
+    }
+
+    /**
+     * Sets the specified double property.
+     *
+     * @param pstrSection the INI section name.
+     * @param pstrProp    the property to be set.
+     * @param pdblVal     the double value to be persisted.
+     */
+    public void setDoubleProperty(String pstrSection, String pstrProp, double pdblVal, String pstrComments) {
+        INISection objSec = null;
+
+        objSec = this.mhmapSections.get(pstrSection);
+        if (objSec == null) {
+            objSec = new INISection(pstrSection);
+            this.mhmapSections.put(pstrSection, objSec);
+        }
+        objSec.setProperty(pstrProp, Double.toString(pdblVal), pstrComments);
+    }
+
+    /**
+     * Sets the specified java.util.Date property.
+     *
+     * @param pstrSection the INI section name.
+     * @param pstrProp    the property to be set.
+     * @param pdtVal      the date value to be persisted.
+     */
+    public void setDateProperty(String pstrSection, String pstrProp, Date pdtVal, String pstrComments) {
+        INISection objSec = null;
+
+        objSec = this.mhmapSections.get(pstrSection);
+        if (objSec == null) {
+            objSec = new INISection(pstrSection);
+            this.mhmapSections.put(pstrSection, objSec);
+        }
+        objSec.setProperty(pstrProp, utilDateToStr(pdtVal, this.mstrDateFmt), pstrComments);
+    }
+
+    /**
+     * Sets the specified java.sql.Timestamp property.
+     *
+     * @param pstrSection the INI section name.
+     * @param pstrProp    the property to be set.
+     * @param ptsVal      the timestamp value to be persisted.
+     */
+    public void setTimestampProperty(String pstrSection, String pstrProp, Timestamp ptsVal, String pstrComments) {
+        INISection objSec = null;
+
+        objSec = this.mhmapSections.get(pstrSection);
+        if (objSec == null) {
+            objSec = new INISection(pstrSection);
+            this.mhmapSections.put(pstrSection, objSec);
+        }
+        objSec.setProperty(pstrProp, timeToStr(ptsVal, this.mstrTimeStampFmt), pstrComments);
+    }
 
     /**
      * Sets the format to be used to interpreat date values.
-     * 
+     *
      * @param pstrDtFmt the format string
      * @throws IllegalArgumentException if the if the given pattern is invalid
      */
-    public void setDateFormat(String pstrDtFmt) {
-        if (!checkDateTimeFormat(pstrDtFmt)) {
+    public void setDateFormat(String pstrDtFmt) throws IllegalArgumentException {
+        if (!checkDateTimeFormat(pstrDtFmt))
             throw new IllegalArgumentException("The specified date pattern is invalid!");
-        }
+        this.mstrDateFmt = pstrDtFmt;
     }
 
     /**
      * Sets the format to be used to interpreat timestamp values.
-     * 
+     *
      * @param pstrTSFmt the format string
      * @throws IllegalArgumentException if the if the given pattern is invalid
      */
     public void setTimeStampFormat(String pstrTSFmt) {
-        if (!checkDateTimeFormat(pstrTSFmt)) {
+        if (!checkDateTimeFormat(pstrTSFmt))
             throw new IllegalArgumentException("The specified timestamp pattern is invalid!");
-        }
+        this.mstrTimeStampFmt = pstrTSFmt;
     }
 
-    /**------------------------------------------------------------------------------
+    /*------------------------------------------------------------------------------
      * Public methods
-    ------------------------------------------------------------------------------.*/
+    ------------------------------------------------------------------------------*/
     public int getTotalSections() {
         return this.mhmapSections.size();
     }
 
     /**
      * Returns a string array containing names of all sections in INI file.
-     * 
+     *
      * @return the string array of section names
      */
     public String[] getAllSectionNames() {
@@ -387,7 +573,7 @@ public final class INIFile {
         String[] arrRet = null;
 
         try {
-            if (!this.mhmapSections.isEmpty()) {
+            if (this.mhmapSections.size() > 0) {
                 arrRet = new String[this.mhmapSections.size()];
                 for (iter = this.mhmapSections.keySet()
                                               .iterator(); iter.hasNext();) {
@@ -397,26 +583,73 @@ public final class INIFile {
             }
         } catch (NoSuchElementException exIgnore) {
         } finally {
-            if (iter != null) {
+            if (iter != null)
                 iter = null;
-            }
         }
         return arrRet;
     }
 
-  
+    /**
+     * Returns a string array containing names of all the properties under specified
+     * section.
+     *
+     * @param pstrSection the name of the section for which names of properties is
+     *                    to be retrieved.
+     * @return the string array of property names.
+     */
+    public String[] getPropertyNames(String pstrSection) {
+        String[] arrRet = null;
+        INISection objSec = null;
 
-  
+        objSec = this.mhmapSections.get(pstrSection);
+        if (objSec != null) {
+            arrRet = objSec.getPropNames();
+        }
+        return arrRet;
+    }
+
+    /**
+     * Returns a map containing all the properties under specified section.
+     *
+     * @param pstrSection the name of the section for which properties are to be
+     *                    retrieved.
+     * @return the map of properties.
+     */
+    public Map<String, INIProperty> getProperties(String pstrSection) {
+        Map<String, INIProperty> hmRet = null;
+        INISection objSec = null;
+
+        objSec = this.mhmapSections.get(pstrSection);
+        if (objSec != null) {
+            hmRet = objSec.getProperties();
+        }
+        return hmRet;
+    }
+
+    /**
+     * Removed specified property from the specified section. If the specified
+     * section or the property does not exist, does nothing.
+     *
+     * @param pstrSection the section name.
+     * @param pstrProp    the name of the property to be removed.
+     */
+    public void removeProperty(String pstrSection, String pstrProp) {
+        INISection objSec = null;
+
+        objSec = this.mhmapSections.get(pstrSection);
+        if (objSec != null) {
+            objSec.removeProperty(pstrProp);
+        }
+    }
 
     /**
      * Removes the specified section if one exists, otherwise does nothing.
-     * 
+     *
      * @param pstrSection the name of the section to be removed.
      */
     public void removeSection(String pstrSection) {
-        if (this.mhmapSections.containsKey(pstrSection)) {
+        if (this.mhmapSections.containsKey(pstrSection))
             this.mhmapSections.remove(pstrSection);
-        }
     }
 
     /**
@@ -433,13 +666,11 @@ public final class INIFile {
         FileWriter objWriter = null;
 
         try {
-            if (this.mhmapSections.isEmpty()) {
+            if (this.mhmapSections.size() == 0)
                 return false;
-            }
             objFile = new File(this.mstrFile);
-            if (objFile.exists()) {
+            if (objFile.exists())
                 objFile.delete();
-            }
             objWriter = new FileWriter(objFile);
             itrSec = this.mhmapSections.keySet()
                                        .iterator();
@@ -459,23 +690,23 @@ public final class INIFile {
                 closeWriter(objWriter);
                 objWriter = null;
             }
-            if (objFile != null) {
+            if (objFile != null)
                 objFile = null;
-            }
-            if (itrSec != null) {
+            if (itrSec != null)
                 itrSec = null;
-            }
         }
         return blnRet;
     }
 
     public synchronized StringBuffer saveToStringBuffer() {
+
         String strName = null;
         String strTemp = null;
         Iterator<String> itrSec = null;
         INISection objSec = null;
         StringBuffer buf = null;
         try {
+
             buf = new StringBuffer();
             itrSec = this.mhmapSections.keySet()
                                        .iterator();
@@ -486,6 +717,7 @@ public final class INIFile {
                 buf.append(strTemp);
                 buf.append("\r\n");
             }
+
         } catch (Exception ex) {
             ex.printStackTrace();
         }
@@ -511,8 +743,8 @@ public final class INIFile {
 
             if (os.indexOf("windows 9") > -1) {
                 p = r.exec("command.com /c set");
-            } else if (os.indexOf("nt") > -1 || os.indexOf("windows 2000") > -1
-                    || os.indexOf("windows xp") > -1) {
+            } else if ((os.indexOf("nt") > -1) || (os.indexOf("windows 2000") > -1)
+                    || (os.indexOf("windows xp") > -1)) {
                 p = r.exec("cmd.exe /c set");
             } else {
                 // our last hope, we assume Unix (thanks to H. Ware for the fix)
@@ -533,7 +765,7 @@ public final class INIFile {
 
     /**
      * Helper function to check the date time formats.
-     * 
+     *
      * @param pstrDtFmt the date time format string to be checked.
      * @return true for valid date/time format, false otherwise.
      */
@@ -544,11 +776,11 @@ public final class INIFile {
         try {
             objFmt = new SimpleDateFormat(pstrDtFmt);
             blnRet = true;
-        } catch (NullPointerException | IllegalArgumentException exIgnore) {
+        } catch (NullPointerException exIgnore) {
+        } catch (IllegalArgumentException exIgnore) {
         } finally {
-            if (objFmt != null) {
+            if (objFmt != null)
                 objFmt = null;
-            }
         }
         return blnRet;
     }
@@ -573,37 +805,42 @@ public final class INIFile {
                 iPos = -1;
                 strLine = objBRdr.readLine()
                                  .trim();
-                if (strLine != null && !strLine.isEmpty()) {
-                    if (";".equals(strLine.substring(0, 1))) {
-                        if (strRemarks == null || strRemarks.isEmpty()) {
-                            strRemarks = strLine.substring(1);
-                        } else {
-                            strRemarks = strRemarks + "\r\n" + strLine.substring(1);
-                        }
-                    } else if (strLine.startsWith("[") && strLine.endsWith("]")) {
-                        // Section start reached create new section
-                        if (objSec != null) {
-                            this.mhmapSections.put(strSection.trim(), objSec);
-                        }
-                        objSec = null;
-                        strSection = strLine.substring(1, strLine.length() - 1);
-                        objSec = new INISection(strSection.trim(), strRemarks);
-                        strRemarks = null;
-                    } else if ((iPos = strLine.indexOf('=')) > 0 && objSec != null) {
-                        // read the key value pair 012345=789
-                        objSec.setProperty(strLine.substring(0, iPos)
-                                                  .trim(),
-                                strLine.substring(iPos + 1)
-                                       .trim(),
-                                strRemarks);
-                        strRemarks = null;
-                    }
+                if (strLine == null) {
+                } else if (strLine.length() == 0) {
+                } else if (strLine.substring(0, 1)
+                                  .equals(";")) {
+                    if (strRemarks == null)
+                        strRemarks = strLine.substring(1);
+                    else if (strRemarks.length() == 0)
+                        strRemarks = strLine.substring(1);
+                    else
+                        strRemarks = strRemarks + "\r\n" + strLine.substring(1);
+                } else if (strLine.startsWith("[") && strLine.endsWith("]")) {
+                    // Section start reached create new section
+                    if (objSec != null)
+                        this.mhmapSections.put(strSection.trim(), objSec);
+                    objSec = null;
+                    strSection = strLine.substring(1, strLine.length() - 1);
+                    objSec = new INISection(strSection.trim(), strRemarks);
+                    strRemarks = null;
+                } else if ((iPos = strLine.indexOf("=")) > 0 && objSec != null) {
+                    // read the key value pair 012345=789
+                    objSec.setProperty(strLine.substring(0, iPos)
+                                              .trim(),
+                            strLine.substring(iPos + 1)
+                                   .trim(),
+                            strRemarks);
+                    strRemarks = null;
                 }
             }
-            if (objSec != null) {
+            if (objSec != null)
                 this.mhmapSections.put(strSection.trim(), objSec);
-            }
-        } catch (IOException | NullPointerException exIgnore) {
+            this.mblnLoaded = true;
+        } catch (FileNotFoundException exIgnore) {
+            this.mhmapSections.clear();
+        } catch (IOException exIgnore) {
+            this.mhmapSections.clear();
+        } catch (NullPointerException exIgnore) {
             this.mhmapSections.clear();
         } finally {
             if (objBRdr != null) {
@@ -614,9 +851,8 @@ public final class INIFile {
                 closeReader(objFRdr);
                 objFRdr = null;
             }
-            if (objSec != null) {
+            if (objSec != null)
                 objSec = null;
-            }
         }
     }
 
@@ -637,37 +873,42 @@ public final class INIFile {
                 // strLine = null;
                 strLine = objBRdr.readLine()
                                  .trim();
-                if (strLine != null && !strLine.isEmpty()) {
-                    if (";".equals(strLine.substring(0, 1))) {
-                        if (strRemarks == null || strRemarks.isEmpty()) {
-                            strRemarks = strLine.substring(1);
-                        } else {
-                            strRemarks = strRemarks + "\r\n" + strLine.substring(1);
-                        }
-                    } else if (strLine.startsWith("[") && strLine.endsWith("]")) {
-                        // Section start reached create new section
-                        if (objSec != null) {
-                            this.mhmapSections.put(strSection.trim(), objSec);
-                        }
-                        objSec = null;
-                        strSection = strLine.substring(1, strLine.length() - 1);
-                        objSec = new INISection(strSection.trim(), strRemarks);
-                        strRemarks = null;
-                    } else if ((iPos = strLine.indexOf('=')) > 0 && objSec != null) {
-                        // read the key value pair 012345=789
-                        objSec.setProperty(strLine.substring(0, iPos)
-                                                  .trim(),
-                                strLine.substring(iPos + 1)
-                                       .trim(),
-                                strRemarks);
-                        strRemarks = null;
-                    }
+                if (strLine == null) {
+                } else if (strLine.length() == 0) {
+                } else if (strLine.substring(0, 1)
+                                  .equals(";")) {
+                    if (strRemarks == null)
+                        strRemarks = strLine.substring(1);
+                    else if (strRemarks.length() == 0)
+                        strRemarks = strLine.substring(1);
+                    else
+                        strRemarks = strRemarks + "\r\n" + strLine.substring(1);
+                } else if (strLine.startsWith("[") && strLine.endsWith("]")) {
+                    // Section start reached create new section
+                    if (objSec != null)
+                        this.mhmapSections.put(strSection.trim(), objSec);
+                    objSec = null;
+                    strSection = strLine.substring(1, strLine.length() - 1);
+                    objSec = new INISection(strSection.trim(), strRemarks);
+                    strRemarks = null;
+                } else if ((iPos = strLine.indexOf("=")) > 0 && objSec != null) {
+                    // read the key value pair 012345=789
+                    objSec.setProperty(strLine.substring(0, iPos)
+                                              .trim(),
+                            strLine.substring(iPos + 1)
+                                   .trim(),
+                            strRemarks);
+                    strRemarks = null;
                 }
             }
-            if (objSec != null) {
+            if (objSec != null)
                 this.mhmapSections.put(strSection.trim(), objSec);
-            }
-        } catch (IOException | NullPointerException e) {
+            this.mblnLoaded = true;
+        } catch (FileNotFoundException e) {
+            this.mhmapSections.clear();
+        } catch (IOException e) {
+            this.mhmapSections.clear();
+        } catch (NullPointerException e) {
             this.mhmapSections.clear();
         } finally {
             if (objBRdr != null) {
@@ -678,21 +919,19 @@ public final class INIFile {
                 closeReader(objFRdr);
                 objFRdr = null;
             }
-            if (objSec != null) {
+            if (objSec != null)
                 objSec = null;
-            }
         }
     }
 
     /**
      * Helper function to close a reader object.
-     * 
+     *
      * @param pobjRdr the reader to be closed.
      */
     private void closeReader(Reader pobjRdr) {
-        if (pobjRdr == null) {
+        if (pobjRdr == null)
             return;
-        }
         try {
             pobjRdr.close();
         } catch (IOException exIgnore) {
@@ -701,13 +940,12 @@ public final class INIFile {
 
     /**
      * Helper function to close a writer object.
-     * 
+     *
      * @param pobjWriter the writer to be closed.
      */
     private void closeWriter(Writer pobjWriter) {
-        if (pobjWriter == null) {
+        if (pobjWriter == null)
             return;
-        }
 
         try {
             pobjWriter.close();
@@ -717,7 +955,7 @@ public final class INIFile {
 
     /**
      * Helper method to check the existance of a file.
-     * 
+     *
      * @param the full path and name of the file to be checked.
      * @return true if file exists, false otherwise.
      */
@@ -727,43 +965,87 @@ public final class INIFile {
 
         try {
             objFile = new File(pstrFile);
-            blnRet = objFile.exists() && objFile.isFile();
+            blnRet = (objFile.exists() && objFile.isFile());
         } catch (Exception e) {
         } finally {
-            if (objFile != null) {
+            if (objFile != null)
                 objFile = null;
-            }
         }
         return blnRet;
     }
 
-  
+    /**
+     * Converts a java.util.date into String
+     *
+     * @param pd      Date that need to be converted to String
+     * @param pstrFmt The date format pattern.
+     * @return String
+     */
+    private String utilDateToStr(Date pdt, String pstrFmt) {
+        String strRet = null;
+        SimpleDateFormat dtFmt = null;
+
+        try {
+            dtFmt = new SimpleDateFormat(pstrFmt);
+            strRet = dtFmt.format(pdt);
+        } catch (Exception e) {
+        } finally {
+            if (dtFmt != null)
+                dtFmt = null;
+        }
+        return strRet;
+    }
 
     /**
-     * This function deletes the remark characters ';' from source string.
-     * 
+     * Converts the given sql timestamp object to a string representation. The
+     * format to be used is to be obtained from the configuration file.
+     *
+     * @param pobjTS  the sql timestamp object to be converted.
+     * @param pblnGMT If true formats the string using GMT timezone otherwise using
+     *                local timezone.
+     * @return the formatted string representation of the timestamp.
+     */
+    private String timeToStr(Timestamp pobjTS, String pstrFmt) {
+        String strRet = null;
+        SimpleDateFormat dtFmt = null;
+
+        try {
+            dtFmt = new SimpleDateFormat(pstrFmt);
+            strRet = dtFmt.format(pobjTS);
+        } catch (IllegalArgumentException iae) {
+            strRet = "";
+        } catch (NullPointerException npe) {
+            strRet = "";
+        } finally {
+            if (dtFmt != null)
+                dtFmt = null;
+        }
+        return strRet;
+    }
+
+    /**
+     * This function deletes the remark characters ';' from source string
+     *
      * @param pstrSrc the source string
      * @return the converted string
      */
     private String delRemChars(String pstrSrc) {
         int intPos = 0;
 
-        if (pstrSrc == null) {
+        if (pstrSrc == null)
             return null;
-        }
-        while ((intPos = pstrSrc.indexOf(';')) >= 0) {
-            if (intPos == 0) {
+        while ((intPos = pstrSrc.indexOf(";")) >= 0) {
+            if (intPos == 0)
                 pstrSrc = pstrSrc.substring(intPos + 1);
-            } else if (intPos > 0) {
+            else if (intPos > 0)
                 pstrSrc = pstrSrc.substring(0, intPos) + pstrSrc.substring(intPos + 1);
-            }
         }
         return pstrSrc;
     }
 
     /**
      * This function adds a remark character ';' in source string.
-     * 
+     *
      * @param pstrSrc source string
      * @return converted string.
      */
@@ -775,18 +1057,16 @@ public final class INIFile {
         String strLeft = null;
         String strRight = null;
 
-        if (pstrSrc == null) {
+        if (pstrSrc == null)
             return null;
-        }
         while (intPos >= 0) {
             intLen = 2;
             intPos = pstrSrc.indexOf("\r\n", intPrev);
             if (intPos < 0) {
                 intLen = 1;
-                intPos = pstrSrc.indexOf('\n', intPrev);
-                if (intPos < 0) {
-                    intPos = pstrSrc.indexOf('\r', intPrev);
-                }
+                intPos = pstrSrc.indexOf("\n", intPrev);
+                if (intPos < 0)
+                    intPos = pstrSrc.indexOf("\r", intPrev);
             }
             if (intPos == 0) {
                 pstrSrc = ";\r\n" + pstrSrc.substring(intPos + intLen);
@@ -794,18 +1074,20 @@ public final class INIFile {
             } else if (intPos > 0) {
                 strLeft = pstrSrc.substring(0, intPos);
                 strRight = pstrSrc.substring(intPos + intLen);
-                if (strRight == null || strRight.isEmpty()) {
+                if (strRight == null)
                     pstrSrc = strLeft;
-                } else {
+                else if (strRight.length() == 0)
+                    pstrSrc = strLeft;
+                else
                     pstrSrc = strLeft + "\r\n;" + strRight;
-                }
                 intPrev = intPos + intLen + 1;
             }
         }
-        if (!";".equals(pstrSrc.substring(0, 1))) {
+        if (!pstrSrc.substring(0, 1)
+                    .equals(";"))
             pstrSrc = ";" + pstrSrc;
-        }
-        return pstrSrc + "\r\n";
+        pstrSrc = pstrSrc + "\r\n";
+        return pstrSrc;
     }
 
     /*------------------------------------------------------------------------------
@@ -813,16 +1095,15 @@ public final class INIFile {
      *----------------------------------------------------------------------------*/
     /**
      * The main entry point for testing.
-     * 
+     *
      * @param pstrArgs the command line arguments array if any.
      */
     public static void main(String[] pstrArgs) {
-        INIFile objINI;
-        String strFile;
+        INIFile objINI = null;
+        String strFile = null;
 
-        if (pstrArgs.length == 0) {
+        if (pstrArgs.length == 0)
             return;
-        }
 
         strFile = pstrArgs[0];
         // Following call will load the strFile if one exists.
@@ -840,13 +1121,13 @@ public final class INIFile {
      *----------------------------------------------------------------------------*/
     /**
      * Class to represent the individual ini file section.
-     * 
+     *
      * @author Prasad P. Khandekar
      * @version 1.0
      * @since 1.0
      */
     private class INISection {
-        /** Variable to hold any comments associated with this section. */
+        /** Variable to hold any comments associated with this section */
         private String mstrComment;
 
         /** Variable to hold the section name. */
@@ -857,41 +1138,49 @@ public final class INIFile {
 
         /**
          * Construct a new section object identified by the name specified in parameter.
-         * 
+         *
          * @param pstrSection The new sections name.
          */
         public INISection(String pstrSection) {
             this.mstrName = pstrSection;
-            this.mhmapProps = new LinkedHashMap<>();
+            this.mhmapProps = new LinkedHashMap<String, INIProperty>();
         }
 
         /**
          * Construct a new section object identified by the name specified in parameter
          * and associated comments.
-         * 
+         *
          * @param pstrSection  The new sections name.
          * @param pstrComments the comments associated with this section.
          */
         public INISection(String pstrSection, String pstrComments) {
             this.mstrName = pstrSection;
             this.mstrComment = delRemChars(pstrComments);
-            this.mhmapProps = new LinkedHashMap<>();
+            this.mhmapProps = new LinkedHashMap<String, INIProperty>();
         }
 
         /**
          * Sets the comments associated with this section.
-         * 
+         *
          * @param pstrComments the comments
          */
         public void setSecComments(String pstrComments) {
             this.mstrComment = delRemChars(pstrComments);
         }
 
-    
+        /**
+         * Removes specified property value from this section.
+         *
+         * @param pstrProp The name of the property to be removed.
+         */
+        public void removeProperty(String pstrProp) {
+            if (this.mhmapProps.containsKey(pstrProp))
+                this.mhmapProps.remove(pstrProp);
+        }
 
         /**
          * Creates or modifies the specified property value.
-         * 
+         *
          * @param pstrProp     The name of the property to be created or modified.
          * @param pstrValue    The new value for the property.
          * @param pstrComments the associated comments
@@ -900,53 +1189,84 @@ public final class INIFile {
             this.mhmapProps.put(pstrProp, new INIProperty(pstrProp, pstrValue, pstrComments));
         }
 
-   
+        /**
+         * Returns a map of all properties.
+         *
+         * @return a map of all properties
+         */
+        public Map<String, INIProperty> getProperties() {
+            return Collections.unmodifiableMap(this.mhmapProps);
+        }
+
+        /**
+         * Returns a string array containing names of all the properties under this
+         * section.
+         *
+         * @return the string array of property names.
+         */
+        public String[] getPropNames() {
+            int iCntr = 0;
+            String[] arrRet = null;
+            Iterator<String> iter = null;
+
+            try {
+                if (this.mhmapProps.size() > 0) {
+                    arrRet = new String[this.mhmapProps.size()];
+                    for (iter = this.mhmapProps.keySet()
+                                               .iterator(); iter.hasNext();) {
+                        arrRet[iCntr] = iter.next();
+                        iCntr++;
+                    }
+                }
+            } catch (NoSuchElementException exIgnore) {
+                arrRet = null;
+            }
+            return arrRet;
+        }
 
         /**
          * Returns underlying value of the specified property.
-         * 
+         *
          * @param pstrProp the property whose underlying value is to be etrieved.
          * @return the property value.
          */
         public INIProperty getProperty(String pstrProp) {
             INIProperty objRet = null;
 
-            if (this.mhmapProps.containsKey(pstrProp)) {
+            if (this.mhmapProps.containsKey(pstrProp))
                 objRet = this.mhmapProps.get(pstrProp);
-            }
             return objRet;
         }
 
-        /**
+        /*
          * (non-Javadoc)
-         * 
+         *
          * @see java.lang.Object#toString()
          */
         @Override
         public String toString() {
-            Set<String> colKeys;
+            Set<String> colKeys = null;
+            String strRet = "";
             Iterator<String> iter = null;
             INIProperty objProp = null;
-            StringBuilder objBuf = new StringBuilder();
+            StringBuffer objBuf = new StringBuffer();
 
-            if (this.mstrComment != null) {
+            if (this.mstrComment != null)
                 objBuf.append(addRemChars(this.mstrComment));
-            }
-            objBuf.append("[")
-                   .append(this.mstrName)
-                   .append("]\r\n");
+            objBuf.append("[" + this.mstrName + "]\r\n");
             colKeys = this.mhmapProps.keySet();
             if (colKeys != null) {
                 iter = colKeys.iterator();
                 if (iter != null) {
                     while (iter.hasNext()) {
                         objProp = this.mhmapProps.get(iter.next());
-                        objBuf.append(objProp);
+                        objBuf.append(objProp.toString());
                         objBuf.append("\r\n");
                     }
                 }
             }
-            return objBuf.toString();
+            strRet = objBuf.toString();
+            return strRet;
         }
     }
 
@@ -955,27 +1275,27 @@ public final class INIFile {
      *----------------------------------------------------------------------------*/
     /**
      * This class represents a key value pair called property in an INI file.
-     * 
+     *
      * @author Prasad P. Khandekar
      * @version 1.0
      * @since 1.0
      */
     private class INIProperty {
-        /** Variable to hold name of this property. */
+        /** Variable to hold name of this property */
         private String mstrName;
-        /** Variable to hold value of this property. */
+        /** Variable to hold value of this property */
         private String mstrValue;
-        /** Variable to hold comments associated with this property. */
+        /** Variable to hold comments associated with this property */
         private String mstrComments;
 
         /**
          * Constructor
-         * 
+         *
          * @param pstrName     the name of this property.
          * @param pstrValue    the value of this property.
          * @param pstrComments the comments associated with this property.
          */
-        private INIProperty(String pstrName, String pstrValue, String pstrComments) {
+        public INIProperty(String pstrName, String pstrValue, String pstrComments) {
             this.mstrName = pstrName;
             this.mstrValue = pstrValue;
             this.mstrComments = delRemChars(pstrComments);
@@ -985,21 +1305,21 @@ public final class INIFile {
          * Returns value of this property. If value contains a reference to environment
          * avriable then this reference is replaced by actual value before the value is
          * returned.
-         * 
+         *
          * @return the value of this property.
          */
         public String getPropValue() {
-            int intStart;
+            int intStart = 0;
             int intEnd = 0;
             String strVal = null;
             String strVar = null;
-            String strRet;
+            String strRet = null;
 
             strRet = this.mstrValue;
-            intStart = strRet.indexOf('%');
+            intStart = strRet.indexOf("%");
             try {
                 if (intStart >= 0) {
-                    intEnd = strRet.indexOf('%', intStart + 1);
+                    intEnd = strRet.indexOf("%", intStart + 1);
                     strVar = strRet.substring(intStart + 1, intEnd);
                     strVal = mpropEnv.getProperty(strVar);
                     if (strVal != null) {
@@ -1007,23 +1327,24 @@ public final class INIFile {
                     }
                 }
             } catch (Exception ex) {
+                return strRet;
             }
             return strRet;
         }
 
-        /**
+        /*
          * (non-Javadoc)
-         * 
+         *
          * @see java.lang.Object#toString()
          */
         @Override
         public String toString() {
             String strRet = "";
 
-            if (this.mstrComments != null) {
+            if (this.mstrComments != null)
                 strRet = addRemChars(mstrComments);
-            }
-            return strRet + this.mstrName + " = " + this.mstrValue;
+            strRet = strRet + this.mstrName + " = " + this.mstrValue;
+            return strRet;
         }
     }
 }
